[gd_scene load_steps=12 format=2]

[ext_resource path="res://Minecraft Evenings.otf" type="DynamicFontData" id=1]
[ext_resource path="res://font.tres" type="DynamicFont" id=2]
[ext_resource path="res://Label3.gd" type="Script" id=3]
[ext_resource path="res://Label4.gd" type="Script" id=4]
[ext_resource path="res://font2.tres" type="DynamicFont" id=5]
[ext_resource path="res://Button.gd" type="Script" id=6]
[ext_resource path="res://Game Over.gd" type="Script" id=7]

[sub_resource type="DynamicFont" id=1]
size = 50
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 50
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 50
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 20
font_data = ExtResource( 1 )

[node name="Game Over" type="Node2D"]
script = ExtResource( 7 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 676.0
margin_top = 335.0
margin_right = 1235.0
margin_bottom = 440.0
custom_fonts/font = ExtResource( 2 )
text = "Game Over"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="."]
margin_left = 36.0
margin_top = 951.0
margin_right = 378.0
margin_bottom = 1060.0
custom_fonts/font = SubResource( 1 )
text = "Level Score:
Total Score:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="."]
margin_left = 387.0
margin_top = 950.0
margin_right = 1750.0
margin_bottom = 1003.0
custom_fonts/font = SubResource( 2 )
text = "0"
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label4" type="Label" parent="."]
margin_left = 387.0
margin_top = 1006.0
margin_right = 1753.0
margin_bottom = 1059.0
custom_fonts/font = SubResource( 3 )
text = "0"
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
margin_left = 299.0
margin_top = 556.0
margin_right = 899.0
margin_bottom = 726.0
custom_fonts/font = ExtResource( 5 )
text = "Retry"
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button3" type="Button" parent="."]
margin_left = 1567.0
margin_top = 994.0
margin_right = 1892.0
margin_bottom = 1048.0
custom_fonts/font = SubResource( 4 )
text = "Next, cowards only"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="."]
margin_left = 1001.0
margin_top = 556.0
margin_right = 1601.0
margin_bottom = 726.0
custom_fonts/font = ExtResource( 5 )
text = "Menu"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
